# mmd

./: pyproject.toml
mmd/: demo_utils.py  mmd.py
notebooks/: demo.ipynb  demo.py  mmd_behavior.ipynb  mmd_behavior.py
